fixing contrast errors

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -148,8 +148,8 @@ main {
     height: 10%;
     margin: 0 auto;
     margin-top: 50%;
-    background-color: rgb(14, 150, 59);
-    color: white;
+    background-color: rgb(25, 194, 81);
+    color: rgb(0, 0, 0);
     border-radius: 20px;
     text-align: center;
     text-justify: center;
@@ -306,7 +306,7 @@ footer {
 .footer-info {
     margin: 0 auto;
     margin-top: 15vh;
-    color: rgb(14, 150, 59);
+    color: rgb(0, 0, 0);
     height: fit-content;
     border-top: solid black 1px;
     font-size: 13px;
